--- a/style.css
+++ b/style.css
@@ -23,3 +23,23 @@ text-align:center;
 div{
   text-align:center;
   }
+  header{
+    width:550px; margin:0 auto;
+  }
+nav{
+  width:550px; margin:0 auto;
+}
+
+
+section{
+  width:550px; margin:0 auto;
+  text-align:left;
+}
+
+.left{
+  text-align:left;
+  margin-left:5px;
+}
+.yellow{
+  color:yellow;
+}
